# cozy_link_toggle

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml
web/: cozy_ext_link_toggle.js
